--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Jaytron Tech Solutions</title>
 
+  <!-- Jaytron Tech Solutions visible in head -->
+  <style>
+    .brand-headline {
+      font-family: 'Eras Demi ITC', Arial, sans-serif;
+      font-weight: bold;
+      font-size: 2rem;
+      color: #ff6600; /* Changed to reddish orange */
+      margin: 1.5rem 0 0.5rem 0;
+      text-align: center;
+      letter-spacing: 1px;
+    }
+    /* Fallback for Eras Demi ITC if not installed */
+    @font-face {
+      font-family: 'Eras Demi ITC';
+      src: local('Eras Demi ITC'), local('ErasDemiITC');
+      font-weight: bold;
+    }
+  </style>
+
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
@@ -12,17 +31,23 @@
 <body>
 
   <!-- 🔷 Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
+    <a class="navbar-brand d-flex align-items-center" href="#" style="font-family: 'Eras Demi ITC', Arial, sans-serif; font-weight: bold; color: #ff6600; font-size: 2rem;">
+      Jaytron Tech Solutions
+    </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+        <li class="nav-item">
+          <a class="btn btn-outline-light ms-3" href="login.html">Login</a>
+        </li>
       </ul>
     </div>
   </div>
@@ -90,21 +115,25 @@
     <h2 class="text-center text-primary mb-4" style="background: rgba(255,255,255,0.7); display: inline-block; padding: 0.5em 2em; border-radius: 0.5em;">Contact Us</h2>
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <form class="mx-auto p-4 rounded-3" style="background: rgba(255,255,255,0.7); box-shadow: 0 2px 16px rgba(0,0,0,0.08);">
+        <!-- Update the form action to use mailto with your business email -->
+        <form class="mx-auto p-4 rounded-3"
+              style="background: rgba(255,255,255,0.7); box-shadow: 0 2px 16px rgba(0,0,0,0.08);"
+              action="mailto:support@jaytrontechsolutions.com" method="POST" enctype="text/plain">
           <div class="mb-3">
             <label for="name" class="form-label">Your Name</label>
-            <input type="text" class="form-control" id="name" placeholder="John Doe">
+            <input type="text" class="form-control" id="name" name="Name" placeholder="John Moresby">
           </div>
           <div class="mb-3">
             <label for="email" class="form-label">Email Address</label>
-            <input type="email" class="form-control" id="email" placeholder="you@example.com">
+            <input type="email" class="form-control" id="email" name="Email" placeholder="you@example.com">
           </div>
           <div class="mb-3">
             <label for="message" class="form-label">Your Message</label>
-            <textarea class="form-control" id="message" rows="4" placeholder="Tell us what you need..."></textarea>
+            <textarea class="form-control" id="message" name="Message" rows="4" placeholder="Tell us what you need..."></textarea>
           </div>
           <button type="submit" class="btn btn-primary w-100">Send Message</button>
         </form>
+        <!-- Replace yourbusiness@email.com with your actual business email -->
       </div>
     </div>
   </div>
