font color change

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img src="assets/logo.png" alt="Jaytron Logo" class="img-fluid" style="max-width: 260px; height: auto;">
       </div>
       <div class="col-md-8 text-center text-md-start">
-        <h1 class="display-4 text-primary">Innovative Mining Solutions</h1>
+        <h1 class="display-4" style="color: #ff6600;">Innovative Mining Solutions</h1>
         <p class="lead text-dark">Empowering Papua New Guinea's mining industry with cutting-edge technology.</p>
         <a href="#services" class="btn btn-primary btn-lg">Explore Our Services</a>
       </div>
