--- a/login.html
+++ b/login.html
@@ -7,24 +7,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="css/custom.css" rel="stylesheet">
 </head>
-<body class="bg-light">
-  <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-    <div class="card shadow p-4" style="max-width: 400px; width: 100%;">
-      <div class="text-center mb-4">
-        <img src="assets/logo.png" alt="Jaytron Logo" class="img-fluid" style="max-width: 180px; height: auto;">
+<body class="bg-light" style="background: url('assets/telematics.png') no-repeat center center fixed; background-size: cover;">
+  <div class="container min-vh-100 d-flex flex-column justify-content-center align-items-center">
+    <div class="row w-100 justify-content-center">
+      <div class="col-12 col-sm-10 col-md-8 col-lg-5 col-xl-4">
+        <div class="card shadow p-4" style="background: rgba(255,255,255,0.95);">
+          <div class="text-center mb-4">
+            <img src="assets/logo.png" alt="Jaytron Logo" class="img-fluid" style="max-width: 180px; height: auto;">
+          </div>
+          <form>
+            <div class="mb-3">
+              <label for="loginEmail" class="form-label">Email address</label>
+              <input type="email" class="form-control" id="loginEmail" placeholder="you@example.com" required>
+            </div>
+            <div class="mb-3">
+              <label for="loginPassword" class="form-label">Password</label>
+              <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+            </div>
+            <button type="submit" class="btn btn-warning w-100">Login</button>
+            <a href="index.html" class="btn btn-link w-100 mt-2">Back to Home</a>
+          </form>
+        </div>
       </div>
-      <form>
-        <div class="mb-3">
-          <label for="loginEmail" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="loginEmail" placeholder="you@example.com" required>
-        </div>
-        <div class="mb-3">
-          <label for="loginPassword" class="form-label">Password</label>
-          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-        </div>
-        <button type="submit" class="btn btn-warning w-100">Login</button>
-        <a href="index.html" class="btn btn-link w-100 mt-2">Back to Home</a>
-      </form>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
