--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
   </section>
 
-  <!-- 👥 About -->
+  <!--  About -->
   <section id="about" class="py-5 bg-light">
     <div class="container">
       <h2 class="text-center text-primary mb-4">About Jaytron Tech</h2>
@@ -109,16 +109,14 @@
     </div>
   </section>
 
-  <!-- 📞 Contact -->
+  <!--  Contact -->
 <section id="contact" class="py-5" style="background: url('assets/contact.jpg') no-repeat center center/cover;">
   <div class="container">
     <h2 class="text-center text-primary mb-4" style="background: rgba(255,255,255,0.7); display: inline-block; padding: 0.5em 2em; border-radius: 0.5em;">Contact Us</h2>
     <div class="row justify-content-center">
       <div class="col-md-8">
-        <!-- Update the form action to use mailto with your business email -->
-        <form class="mx-auto p-4 rounded-3"
-              style="background: rgba(255,255,255,0.7); box-shadow: 0 2px 16px rgba(0,0,0,0.08);"
-              action="mailto:support@jaytrontechsolutions.com" method="POST" enctype="text/plain">
+        <form id="contactForm" class="mx-auto p-4 rounded-3"
+              style="background: rgba(255,255,255,0.7); box-shadow: 0 2px 16px rgba(0,0,0,0.08);">
           <div class="mb-3">
             <label for="name" class="form-label">Your Name</label>
             <input type="text" class="form-control" id="name" name="Name" placeholder="John Moresby">
@@ -132,8 +130,16 @@
             <textarea class="form-control" id="message" name="Message" rows="4" placeholder="Tell us what you need..."></textarea>
           </div>
           <button type="submit" class="btn btn-primary w-100">Send Message</button>
+          <div id="formSuccess" class="alert alert-success mt-3 d-none" role="alert">
+            Thank you! Your message has been sent.
+          </div>
         </form>
-        <!-- Replace yourbusiness@email.com with your actual business email -->
+        <div class="text-center mt-4">
+          <span class="fw-bold text-primary">Or email us directly:</span><br>
+          <a href="mailto:support@jaytrontechsolutions.com" class="text-decoration-none text-dark">
+            support@jaytrontechsolutions.com
+          </a>
+        </div>
       </div>
     </div>
   </div>
@@ -149,6 +155,14 @@
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      document.getElementById('formSuccess').classList.remove('d-none');
+      // Optionally, clear the form fields:
+      this.reset();
+    });
+  </script>
 </body>
 </html>
 
